# Research-Assistant-Agentic-System-using-CrewAI

./: README.md  pyproject.toml
src/research_assistant_automation/: crew.py  main.py
src/research_assistant_automation/config/: agents.yaml  tasks.yaml
