[project]
name = "research_assistant_automation"
version = "0.1.0"
description = "research_assistant_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
research_assistant_automation = "research_assistant_automation.main:run"
run_crew = "research_assistant_automation.main:run"
train = "research_assistant_automation.main:train"
replay = "research_assistant_automation.main:replay"
test = "research_assistant_automation.main:test"
run_with_trigger = "research_assistant_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
